--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
-            .register("serviceworker.js")
+            .register("/Swad-Maharashtra-Cha-PWA/serviceworker.js")
             .then((registration) => {
               console.log("✅ Service Worker registered! Scope:", registration.scope);
    
